[package]
name = "iost-chain"
version = "0.1.0"
authors = ["alexgituser <alexgituser@email.com>"]
edition = "2018"

[dependencies]
async-trait = { version = "0.1.36", default-features = false }
base58 = { version = "0.1.0", optional = true }
byteorder = { version = "1.3.2", default-features = false }
chrono = { version = "0.4.10", default-features = false }
crypto = { version = "0.0.2", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
digest = { version = "0.8.1", default-features = false }
ed25519 = { version = "0.2.0", default-features = false }
hex = { version = "0.4", default-features = false }
iost-derive = { path ="../iost-derive" }
itoa = { version = "0.4.4", default-features = false }
keys = { package = "iost-keys", path = "../keys", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, optional = true }
sha3 = { version = "0.8.2", default-features = false}
#tokio = { version = "0.2.6", default-features = false, features = ["macros"] }

[dev-dependencies]
#iost-rpc = { path = "../rpc" }

[features]
default = ["std"]
std = [
#"byteorder/std",
    "base58",
    "chrono/default",
    "codec/std",
    "keys/std",
    "serde/std",
    "serde_json/std",
]